# demo_swig

./: README.md  _makefile  makefile  pyproject.toml  setup.py
simple_version_setup/: setup_multiple_module_manual.py  setup_single_module.py
src/demo/: __init__.py  module.cpp  module.hpp  module.i  module.py  module1.cpp  module1.hpp  module1.i  module1.py
tests/: test_module.py
